<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/calendar"
            android:title="@string/nav_events" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/nav_share" />

    </group>

    <item android:title="Other"
        android:id="@+id/tools">
        <menu>

            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>